[tool.poetry]
name = "docpgsailer"
version = "0.1.0"
description = ""
authors = ["Hailemichael Atrsaw Tibebu <hailemichael.atrsaw2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
psycopg2-binary = "^2.9.10"
croniter = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
